# Embedded-sensor-fusion-demo

./: .gitignore  CMakeLists.txt  README.md
include/: AppConfig.hpp  CsvLogger.hpp  Kalman2State.hpp  LeastSquaresFit.hpp  SignalGenerator.hpp
rtos/: README.md  freertos_main.cpp
sensor-fusion-kalman-lsfit/: README.md.txt
src/: AppConfig.cpp  CsvLogger.cpp  Kalman2State.cpp  LeastSquaresFit.cpp  SignalGenerator.cpp  main.cpp
tests/: test_main.cpp
